[gd_scene load_steps=3 format=3 uid="uid://bihreyct4usw7"]

[ext_resource type="Script" uid="uid://bhunmcxeqw4u3" path="res://Scripts/main_menu.gd" id="1_534gg"]

[sub_resource type="LabelSettings" id="LabelSettings_cqv25"]
font_size = 82

[node name="Main Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_534gg")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.14406255, 0.14406255, 0.14406255, 1)

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -121.0
offset_top = 71.62
offset_right = 121.0
offset_bottom = 184.62007
grow_horizontal = 2
text = "LE JEU"
label_settings = SubResource("LabelSettings_cqv25")
horizontal_alignment = 1
vertical_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -244.0
offset_top = -79.655
offset_right = 244.0
offset_bottom = 168.14505
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 10

[node name="SelectLevel" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 24
text = "SELECT LEVEL"

[node name="Settings" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 24
text = "SETTINGS"

[node name="Exit" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 24
text = "EXIT"

[connection signal="pressed" from="VBoxContainer/SelectLevel" to="." method="_on_select_level_pressed"]
[connection signal="pressed" from="VBoxContainer/Settings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="VBoxContainer/Exit" to="." method="_on_exit_pressed"]
