extends Control


func _on_select_level_pressed() -> void:
	get_tree().change_scene_to_file("res://Scenes/Interfaces/select_level.tscn")


func _on_settings_pressed() -> void:
	get_tree().change_scene_to_file("res://Scenes/Interfaces/settings_menu.tscn")


func _on_exit_pressed() -> void:
	get_tree().quit()
